--- a/force-app/main/default/classes/AccountController.cls
+++ b/force-app/main/default/classes/AccountController.cls
@@ -1,3 +1,4 @@
+//test
 public with sharing class AccountController {
     public static List<Account> getAllActiveAccounts() {
       return [SELECT Id, Name, Active__c FROM Account WHERE Active__c = 'Yes' WITH SECURITY_ENFORCED];
